Add pin compatible compile flags

--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -16,6 +16,8 @@ target_sources(
   serialization.h
 )
 
+target_compile_options(ramulator-base PRIVATE -fPIC -DFMT_HEADER_ONLY=1 -fabi-version=2 -D_GLIBCXX_USE_CXX11_ABI=0)
+
 target_link_libraries(
   ramulator
   PRIVATE
