--- a/src/addr_mapper/CMakeLists.txt
+++ b/src/addr_mapper/CMakeLists.txt
@@ -9,6 +9,8 @@ target_sources(
   impl/rit.h
 )
 
+target_compile_options(ramulator-addrmapper PRIVATE -fPIC -DFMT_HEADER_ONLY=1 -fabi-version=2 -D_GLIBCXX_USE_CXX11_ABI=0)
+
 target_link_libraries(
   ramulator
   PRIVATE
