--- a/src/dram/CMakeLists.txt
+++ b/src/dram/CMakeLists.txt
@@ -19,6 +19,8 @@ target_sources(
   impl/HBM3.cpp
 )
 
+target_compile_options(ramulator-dram PRIVATE -fPIC -DFMT_HEADER_ONLY=1 -fabi-version=2 -D_GLIBCXX_USE_CXX11_ABI=0)
+
 target_link_libraries(
   ramulator
   PRIVATE
