--- a/src/memory_system/CMakeLists.txt
+++ b/src/memory_system/CMakeLists.txt
@@ -10,6 +10,8 @@ target_sources(
   impl/generic_DRAM_system.cpp
 )
 
+target_compile_options(ramulator-memorysystem PRIVATE -fPIC -DFMT_HEADER_ONLY=1 -fabi-version=2 -D_GLIBCXX_USE_CXX11_ABI=0)
+
 target_link_libraries(
   ramulator
   PRIVATE
